syntax = "proto3";

package dhtnode;

message AgentRecord {
    string service_id = 1;
    string address = 2;
    string public_key = 3;
    string peer_public_key = 4;
    string signature = 5;
}

message Register {
    AgentRecord record = 1;
}

message LookupRequest {
    string agent_address = 1;
}

message LookupResponse {
    AgentRecord agent_record = 1;
}

message Status {
    enum ErrCode {
        // common (0x)
        SUCCESS = 0;
        ERROR_UNSUPPORTED_VERSION = 1;
        ERROR_UNEXPECTED_PAYLOAD = 2;
        ERROR_GENERIC = 3;
        // register (1x)
        ERROR_INVALID_AGENT_ADDRESS = 10;
        ERROR_INVALID_PUBLIC_KEY = 11;
        ERROR_INVALID_PROOF = 12;
        // lookup (2x)
        ERROR_UNKNOWN_AGENT_ADDRESS = 20; 
    }

    ErrCode code = 1;
    repeated string msgs = 2;
}

message AcnMessage {
    string version = 1;
    oneof payload {
        Status status = 2;
        Register register = 3;
        LookupRequest lookup_request = 4;
        LookupResponse lookup_response = 5;
    }
}